[gd_scene load_steps=2 format=3 uid="uid://lighthouse_typing"]

[ext_resource type="Script" path="res://src/ui/typing/lighthouse_typing.gd" id="1_script"]

[node name="LighthouseTyping" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12, 0.2, 0.32, 0.98)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "등대 타자 연습"
horizontal_alignment = 1

[node name="GameArea" type="ColorRect" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)
clip_children = 1
color = Color(0.08, 0.14, 0.24, 1)

[node name="Info" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="ScoreLabel" type="Label" parent="VBox/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "점수: 0"

[node name="LevelLabel" type="Label" parent="VBox/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "레벨 1"

[node name="LivesLabel" type="Label" parent="VBox/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.6, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "생명: 3"

[node name="ResultLabel" type="Label" parent="VBox/Info"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95, 0.85, 0.35, 1)
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="InputArea" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="LineEdit" type="LineEdit" parent="VBox/InputArea"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 36)
max_length = 30
placeholder_text = "단어를 입력하고 Enter"
expand_to_text_length = true

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="StartButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "시작"

[node name="BackButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "돌아가기"

[node name="HelpButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "게임 방법"

[node name="GameOverPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="GameOverPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="GameOverPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="GameOverLabel" type="Label" parent="GameOverPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.98, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "게임 오버!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="GameOverPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "다시 하기"

[node name="HelpPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -140.0
offset_right = 220.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="HelpPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="HelpPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HelpLabel" type="Label" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.85, 1)
theme_override_font_sizes/font_size = 16
text = "낙하하는 단어를 입력해 맞추세요."
autowrap_mode = 3

[node name="CloseBtn" type="Button" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "닫기"
